[gd_scene load_steps=4 format=2]

[ext_resource path="res://VNTheme.tres" type="Theme" id=1]
[ext_resource path="res://GeneralUIScripts/PopupPanel.gd" type="Script" id=2]
[ext_resource path="res://Resources/Fonts/orange-kid_small.tres" type="DynamicFont" id=3]

[node name="PopupPanel" type="PopupPanel"]
visible = true
margin_left = 148.0
margin_right = 1048.0
margin_bottom = 675.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 4.0
margin_top = 4.0
margin_right = 896.0
margin_bottom = 671.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 892.0
margin_bottom = 97.0
text = "Alert!"
align = 1
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 101.0
margin_right = 892.0
margin_bottom = 506.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 15

[node name="MessageLabel" type="Label" parent="VBoxContainer/MarginContainer"]
margin_left = 20.0
margin_right = 872.0
margin_bottom = 390.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 3 )
align = 1
valign = 1
autowrap = true

[node name="ButtonMarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 510.0
margin_right = 892.0
margin_bottom = 667.0
custom_constants/margin_right = 10

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ButtonMarginContainer"]
margin_right = 882.0
margin_bottom = 157.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OkButton" type="Button" parent="VBoxContainer/ButtonMarginContainer/HBoxContainer"]
margin_right = 439.0
margin_bottom = 157.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
text = "Ok!"

[node name="AbortButton" type="Button" parent="VBoxContainer/ButtonMarginContainer/HBoxContainer"]
margin_left = 443.0
margin_right = 882.0
margin_bottom = 157.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
text = "Abort!"

[node name="Timer" type="Timer" parent="."]
one_shot = true
[connection signal="pressed" from="VBoxContainer/ButtonMarginContainer/HBoxContainer/OkButton" to="." method="_on_OkButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonMarginContainer/HBoxContainer/AbortButton" to="." method="_on_AbortButton_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
